--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -20,7 +20,13 @@
     height: 50px;
     padding: 0 2%;
     position: relative; }
+    .nav .nav-container:before, .nav .nav-container:after {
+      content: "";
+      display: table; }
+    .nav .nav-container:after {
+      clear: both; }
     .nav .nav-container .logo {
+      width: 80px;
       float: left; }
   .nav a {
     color: #8c8c8c; }
@@ -28,38 +34,20 @@
       text-decoration: none; }
   .nav .search-form {
     position: relative;
-    width: 50%;
-    margin-left: 2%; }
+    width: 50%; }
     .nav .search-form .fa-search {
       position: absolute;
-      right: 40%;
+      right: 39%;
       color: #000;
       top: 18px;
       font-size: 14px; }
     .nav .search-form .search {
-      display: inline-block;
       width: 60%;
       border: 1px solid #ddd;
-      height: 20px;
       padding: 5px;
       font-size: 14px;
       font-weight: bold;
       vertical-align: middle;
-      -webkit-border-radius: 3px;
-      -moz-border-radius: 3px;
-      -ms-border-radius: 3px;
-      -o-border-radius: 3px;
-      border-radius: 3px; }
-    .nav .search-form button {
-      display: inline-block;
-      vertical-align: middle;
-      margin-left: 2%;
-      height: 30px;
-      line-height: 30px;
-      padding: 0 10px;
-      color: #fff;
-      border: none;
-      background: #0084ff;
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       -ms-border-radius: 3px;
