--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -16,10 +16,12 @@ $menu-width:30px;
     background:#333;
     @include clearfix();
     .nav-container{
+        @include center-block();
+        @include clearfix();
         .logo{
+            width:80px;
             float:left; 
         }
-        @include center-block();
         height:$nav-container-height;
         padding:0 2%;
         position:relative;
@@ -34,34 +36,19 @@ $menu-width:30px;
         position:relative;
         .fa-search{
             position:absolute; 
-            right:40%;
+            right:39%;
             color:#000;
             top:18px;
             font-size:14px;
         }
         width:50%;
-        margin-left:2%;
         .search{
-            display:inline-block;
             width:60%;
             border:1px solid #ddd;
-            height:20px;
             padding:5px;
             font-size:14px;
             font-weight:bold;
             vertical-align:middle;
-            @include border-radius(3px);
-        }
-        button{
-            display:inline-block;
-            vertical-align:middle;
-            margin-left:2%;
-            height:30px;
-            line-height:30px;
-            padding:0 10px;
-            color:#fff;
-            border:none;
-            background:$action-blue;
             @include border-radius(3px);
         }
     }
