--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -179,10 +179,11 @@
         }
     }
 }
-.reply-list,.hot-reply-list{
-    border-top:1px solid $border-color;
+.reply-list h2,.hot-reply-list h2{
+    border-bottom:1px solid $border-color;
 }
 .reply-list,.hot-reply-list{
+    margin-top:20px;
     .reply-item{
         width:100%;
         @include clearfix(); 
@@ -409,6 +410,7 @@
         height:40px;
         padding:0 2%;
         font-weight:bold;
+        font-size:16px;
     }
     #new-topic-content{
         margin:10px 0;
@@ -430,6 +432,13 @@
         @include border-radius(3px);
         &:hover{
             background:$action-blue-hover;
+        }
+    }
+    #auto-save{
+        display:none; 
+        margin-left:15px;
+        .fa{
+            margin-right:5px;
         }
     }
 }
@@ -483,63 +492,6 @@
 .message-list{
     li{
         padding:10px 0;
-    }
-}
-//chat
-.chat-wrapper{
-    position:relative;
-    border:1px solid #ddd;
-    @include border-radius(5px);
-    position:relative;
-    width:80%;
-    overflow:hidden;
-    padding:0 0 40px 0;
-    margin:0 auto;
-    #newmessage{
-        height:16px;
-        line-height:16px;
-        outline:0;
-        position:absolute;
-        bottom:0;
-        right:0;
-        left:0;
-        width:100%;
-        height:20px;
-        line-height:20px;
-        font-size:16px;
-        border:none;
-        padding:5px;
-    }
-    ul.msgs{
-        width:80%;
-        overflow-y:scroll;
-        height:100px;
-        min-height:200px;
-        li{
-            margin:10px 0;
-            height:20px;
-            line-height:20px;
-            font-size:16px;
-            .author{
-                color:#999;
-            }
-            .message{
-                margin-left:10px;
-                color:#666; 
-            }
-        }
-    }
-    ul.users{
-        border-left:1px solid #ccc;
-        position:absolute;
-        right:0;
-        width:20%;
-        top:0;
-        li{
-            height:20px; 
-            line-height:20px;
-            font-size:16px;
-        }
     }
 }
 //tip
