--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -6,12 +6,8 @@
  *
  * @Author sp
  */
-@font-face {
-  font-family: 'NotoS';
-  src: url("../fonts/NotoS.otf") format("opentype"); }
-
 html {
-  font: 13px/1.7 "NotoS", "Gotham Narrow SSm", "Helvetica Neue", arial, sans-serif; }
+  font: 13px/1.7 "Helvetica Neue", arial, sans-serif; }
 
 body {
   margin: 0;
@@ -529,6 +525,7 @@ textarea {
           color: #ddd; }
 
 footer {
+  text-align: center;
   color: #999;
   padding: 20px;
   border-top: 1px solid #e5e5e5;
@@ -618,24 +615,35 @@ footer {
     .topic-list li:after {
       clear: both; }
     .topic-list li h2 {
-      margin: 0 0 0 10px; }
+      margin: 0; }
+      .topic-list li h2 .fa {
+        vertical-align: middle;
+        font-size: 14px; }
       .topic-list li h2 a {
-        color: #111; }
-    .topic-list li span {
-      margin: 0 5px; }
+        color: #111;
+        vertical-align: middle; }
     .topic-list li .author-avatar {
-      width: 60px; }
+      width: 10%;
+      float: left; }
       .topic-list li .author-avatar img {
+        width: 48px;
+        height: 48px;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
         -ms-border-radius: 5px;
         -o-border-radius: 5px;
         border-radius: 5px; }
     .topic-list li .topic-title {
+      float: left;
       overflow: hidden;
-      width: 50%; }
+      width: 58%;
+      padding: 0 1%; }
     .topic-list li .topic-detail {
-      width: 50px; }
+      float: left;
+      width: 10%; }
+    .topic-list li .topic-last-reply {
+      width: 20%;
+      float: left; }
 
 .topic-main h1 {
   font-size: 18px; }
@@ -670,12 +678,13 @@ footer {
 .topic-main .topic-meta:after {
   clear: both; }
 .topic-main .topic-meta li {
-  font-size: 12px;
-  color: #999;
+  color: #ccc;
   margin-right: 20px;
   float: left; }
   .topic-main .topic-meta li a {
-    color: #999; }
+    color: #ccc; }
+    .topic-main .topic-meta li a:hover {
+      color: #999; }
   .topic-main .topic-meta li.share i {
     cursor: pointer;
     font-size: 14px;
@@ -766,6 +775,11 @@ footer {
       color: #ccc; }
   .reply-list .reply-meta, .hot-reply-list .reply-meta {
     margin-left: 90px; }
+    .reply-list .reply-meta a, .hot-reply-list .reply-meta a {
+      color: #666; }
+      .reply-list .reply-meta a:hover, .hot-reply-list .reply-meta a:hover {
+        color: #4083aa;
+        text-decoration: underline; }
 
 .topic-collect {
   font-size: 20px; }
@@ -926,6 +940,9 @@ footer {
     -o-border-radius: 3px;
     border-radius: 3px;
     margin: 10px 0; }
+  #new-topic h1 a {
+    font-size: 14px;
+    line-height: 30px; }
   #new-topic #new-topic-title {
     width: 95%;
     height: 40px;
@@ -941,7 +958,7 @@ footer {
     -o-border-radius: 3px;
     border-radius: 3px;
     width: 99%;
-    height: 300px;
+    height: 450px;
     resize: vertical;
     background: #fff; }
   #new-topic button[type=submit] {
