--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,13 +89,13 @@
     .topic-list li .topic-title {
       float: left;
       overflow: hidden;
-      width: 58%;
+      width: 53%;
       padding: 0 1%; }
     .topic-list li .topic-detail {
       float: left;
       width: 10%; }
     .topic-list li .topic-last-reply {
-      width: 20%;
+      width: 25%;
       float: left; }
 
 .topic-main h1 {
@@ -231,8 +231,7 @@
     .reply-list .reply-meta a, .hot-reply-list .reply-meta a {
       color: #666; }
       .reply-list .reply-meta a:hover, .hot-reply-list .reply-meta a:hover {
-        color: #4083aa;
-        text-decoration: underline; }
+        color: #4083aa; }
 
 .topic-collect {
   font-size: 20px; }
@@ -260,7 +259,7 @@
   .reg-form .row, .login-form .row {
     position: relative;
     margin: 10px 0 0 0;
-    height: 80px; }
+    height: 60px; }
   .reg-form input[type="text"], .reg-form input[type="password"], .login-form input[type="text"], .login-form input[type="password"] {
     position: absolute;
     left: 50px;
@@ -292,8 +291,13 @@
     line-height: 40px;
     height: 40px;
     left: 50px; }
+  .reg-form .act .rememberme, .login-form .act .rememberme {
+    position: absolute;
+    left: 50px;
+    top: -20px; }
   .reg-form .act button, .login-form .act button {
     position: absolute;
+    top: 20px;
     left: 50px;
     height: 40px;
     padding: 0 30px;
