--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -93,7 +93,7 @@
         .topic-title{
             float:left;
             overflow:hidden;
-            width:58%;
+            width:53%;
             padding:0 1%;
         }
         .topic-detail{
@@ -101,7 +101,7 @@
             width:10%;
         }
         .topic-last-reply{
-            width:20%;
+            width:25%;
             float:left;
         }
     }
@@ -251,7 +251,6 @@
             color:#666; 
             &:hover{
                 color:$link-color; 
-                text-decoration:underline;
             }
         }
         margin-left:90px;
@@ -284,7 +283,7 @@
     .row{
         position:relative;
         margin:10px 0 0 0; 
-        height:80px;
+        height:60px;
     }
     input[type="text"],input[type="password"]{
         position:absolute;
@@ -318,8 +317,14 @@
         left:50px;
     }
     .act{
+        .rememberme{
+            position:absolute;
+            left:50px;
+            top:-20px;
+        }
         button{
             position:absolute;
+            top:20px;
             left:50px;
             height:40px;     
             padding:0 30px;
