update unfinish upload img

--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -25,6 +25,12 @@ body {
     font-size: 18px;
     margin: 0; }
 
+::selection {
+  background: #a8d1ff; }
+
+::-moz-selection {
+  background: #a8d1ff; }
+
 img {
   vertical-align: middle;
   border: 0; }
@@ -925,7 +931,7 @@ footer {
 .settings form .up-trigger {
   padding: 0px;
   background: none;
-  color: #3bc676;
+  color: #30c880;
   outline: 0;
   display: block; }
 .settings #showurl {
@@ -980,16 +986,13 @@ footer {
     border-radius: 3px; }
     #new-topic button[type=submit]:hover {
       background: #007aeb; }
+  #new-topic #auto-save-trigger, #new-topic #clear-save {
+    margin-left: 20px; }
   #new-topic #auto-save {
     display: none;
     margin-left: 15px; }
     #new-topic #auto-save .fa {
       margin-right: 5px; }
-
-#popup {
-  width: 50%;
-  background: #fff;
-  display: none; }
 
 .more-trigger {
   text-align: center;
@@ -1044,7 +1047,8 @@ footer {
   text-align: center;
   background: #000;
   opacity: .8;
-  color: #fff; }
+  color: #fff;
+  z-index: 10002; }
 
 .user-wrapper {
   margin: -20px; }
@@ -1081,6 +1085,36 @@ footer {
       background: #fff;
       padding: 5px;
       margin-top: -64px; }
+
+.popup {
+  width: 50%;
+  padding: 10px;
+  background: #fff;
+  display: none;
+  -webkit-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 20px rgba(0, 0, 0, 0.3); }
+  .popup .popup-wrapper {
+    position: relative;
+    padding-top: 16px; }
+  .popup:before, .popup:after {
+    content: "";
+    display: table; }
+  .popup:after {
+    clear: both; }
+  .popup .p-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: #e9655b;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    cursor: pointer;
+    display: block;
+    width: 16px;
+    height: 16px; }
 
 @media screen and (min-width: 767px) and (max-width: 970px) {
   .main .main-wrapper {
