--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -17,6 +17,12 @@ body {
     font-size: 18px;
     margin: 0; }
 
+::selection {
+  background: #a8d1ff; }
+
+::-moz-selection {
+  background: #a8d1ff; }
+
 img {
   vertical-align: middle;
   border: 0; }
