--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -23,7 +23,10 @@ $border-color:#f0f0f0;
 $action-blue:#0084ff;
 $action-blue-hover:#007AEB;
 
-$action-green:#3BC676;
-$action-green-hover:#38BC70;
+$action-green:#30C880;
+$action-green-hover:#30C880;
+
+$action-red:#fc5140;
+$action-red-hover:#fc5140;
 
 $red-error:#F14F3D;
