--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -466,6 +466,9 @@
             background:$action-blue-hover;
         }
     }
+    #auto-save-trigger,#clear-save{
+        margin-left:20px; 
+    }
     #auto-save{
         display:none; 
         margin-left:15px;
@@ -473,12 +476,6 @@
             margin-right:5px;
         }
     }
-}
-//popup
-#popup{
-    width:50%; 
-    background:#fff;
-    display:none;
 }
 //loading
 .more-trigger{
@@ -538,6 +535,7 @@
     background:#000;
     opacity:.8;
     color:#fff;
+    z-index:10002;
 }
 //user index
 .user-wrapper{
@@ -576,5 +574,29 @@
             padding:5px;
             margin-top:-64px;
         }
+    }
+}
+//popup
+.popup{
+    .popup-wrapper{
+        position:relative; 
+        padding-top:16px;
+    }
+    @include clearfix();
+    width:50%;
+    padding:10px;
+    background:#fff;
+    display:none;
+    @include box-shadow(0 1px 20px rgba(0, 0, 0, 0.3));
+    .p-close{
+        position:absolute;
+        right:0;
+        top:0;
+        background:#e9655b;
+        @include border-radius(50%);
+        cursor:pointer;
+        display:block;
+        width:16px;
+        height:16px;
     }
 }
