--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -18,7 +18,7 @@
     margin-left: auto;
     margin-right: auto;
     height: 50px;
-    padding: 0 2%;
+    padding: 0 30px;
     position: relative; }
     .nav .nav-container:before, .nav .nav-container:after {
       content: "";
@@ -56,7 +56,7 @@
   .nav .menu {
     position: absolute;
     text-align: right;
-    right: 0;
+    right: 30px;
     width: 40%;
     height: 50px; }
     .nav .menu > li {
@@ -82,9 +82,8 @@
           color: #ddd; }
 
 footer {
-  text-align: center;
   color: #999;
-  padding: 20px;
+  padding: 20px 30px;
   border-top: 1px solid #e5e5e5;
   height: 30px;
   line-height: 30px; }
@@ -93,9 +92,9 @@ footer {
     footer a:hover {
       color: #666; }
   footer p {
-    display: inline-block; }
+    display: inline-block;
+    margin-right: 20px; }
   footer .ft-meta {
-    margin-left: 10px;
     vertical-align: middle;
     display: inline-block; }
     footer .ft-meta li {
