--- a/public/css/style.css
+++ b/public/css/style.css
@@ -553,9 +553,14 @@
     clear: both; }
   .popup .p-close {
     position: absolute;
+    text-align: center;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    font-size: 14px;
     right: 0;
     top: 0;
     cursor: pointer;
     display: block;
-    font-size: 16px;
+    color: #333;
     margin: 0; }
