--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -589,12 +589,19 @@
     display:none;
     @include box-shadow(0 1px 20px rgba(0, 0, 0, 0.3));
     .p-close{
+        //@include border-radius(50%);
+        //background:#ff5d4e;
         position:absolute;
+        text-align:center;
+        width:16px;
+        height:16px;
+        line-height:16px;
+        font-size:14px;
         right:0;
         top:0;
         cursor:pointer;
         display:block;
-        font-size:16px;
+        color:#333;
         margin:0;
     }
 }
