update and unfinish sidebar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,6 +115,8 @@
   .topic-main .topic-content img {
     max-width: 100%; }
     .topic-main .topic-content img.canzoom {
+      cursor: -webkit-zoom-in;
+      cursor: -moz-zoom-in;
       cursor: zoom-in; }
   .topic-main .topic-content ul {
     list-style-type: disc;
@@ -541,6 +543,15 @@
   color: #fff;
   z-index: 10002; }
 
+#show-avatar, #current-avatar {
+  width: 128px;
+  height: 128px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px; }
+
 .user-wrapper {
   margin: -20px; }
   .user-wrapper .user-hd {
@@ -557,14 +568,6 @@
       margin: auto 0; }
       .user-wrapper .user-hd .userbg img {
         width: 100%; }
-  .user-wrapper #show-avatar, .user-wrapper #current-avatar {
-    width: 128px;
-    height: 128px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px; }
   .user-wrapper .user-detail {
     border-bottom: 1px solid #ddd;
     padding-bottom: 20px;
@@ -590,7 +593,6 @@
   -webkit-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.3);
   box-shadow: 0 1px 20px rgba(0, 0, 0, 0.3); }
   .popup img {
-    max-height: 100%;
     max-width: 100%; }
   .popup .popup-wrapper {
     position: relative; }
