--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -7,7 +7,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   line-height: 50px;
   color: #fff;
-  background: #333; }
+  background: rgba(0, 0, 0, 0.8); }
   .nav:before, .nav:after {
     content: "";
     display: table; }
