--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -7,7 +7,7 @@
  * @Author sp
  */
 html {
-  font: 13px/1.7 "Helvetica Neue", arial, sans-serif; }
+  font: 13px/1.7 "Helvetica Neue", Arial, "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
 
 body {
   margin: 0;
@@ -1149,6 +1149,10 @@ footer {
   box-shadow: 0 1px 20px rgba(0, 0, 0, 0.3); }
   .popup img {
     max-width: 100%; }
+    .popup img.canzoomout {
+      cursor: -webkit-zoom-out;
+      cursor: -moz-zoom-out;
+      cursor: zoom-out; }
   .popup .popup-wrapper {
     position: relative; }
   .popup:before, .popup:after {
