--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,5 +1,5 @@
 html {
-  font: 13px/1.7 "Helvetica Neue", arial, sans-serif; }
+  font: 13px/1.7 "Helvetica Neue", Arial, "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
 
 body {
   margin: 0;
